[gd_scene load_steps=17 format=3 uid="uid://c2gx7ywnxippb"]

[ext_resource type="Script" uid="uid://d067oysvmrium" path="res://app_manager.gd" id="1_3253y"]
[ext_resource type="Texture2D" uid="uid://bsjo8v5tr55fw" path="res://button.png" id="1_ulcgi"]
[ext_resource type="Texture2D" uid="uid://b3pew5o6b1jv4" path="res://delete_container.png" id="2_m7jmp"]
[ext_resource type="Script" uid="uid://d3h6b00ggjkbg" path="res://entry.gd" id="3_3253y"]
[ext_resource type="Texture2D" uid="uid://boko4kuxnmiwu" path="res://data_container.png" id="4_u3cyc"]
[ext_resource type="Script" uid="uid://ccvh7vd6vs0yy" path="res://delete_menu.gd" id="6_ni31j"]
[ext_resource type="Texture2D" uid="uid://dsh1vp10hheqd" path="res://data_container_green.png" id="6_y2354"]
[ext_resource type="Script" uid="uid://72h0upbcrqpj" path="res://data_entry_menu.gd" id="8_xlvrw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nxogm"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="LabelSettings" id="LabelSettings_3253y"]
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_nxogm"]
font_size = 75

[sub_resource type="LabelSettings" id="LabelSettings_u3cyc"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_ni31j"]
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_xlvrw"]
font_size = 80

[sub_resource type="LabelSettings" id="LabelSettings_73fnb"]
font_size = 80

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ni31j"]
load_path = "res://.godot/imported/delete_container.png-d930b95b842c42d21e84dcc284454b47.ctex"

[node name="App" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3253y")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.220914, 0.55965, 0.409104, 1)

[node name="Main_Display" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Delete_Data_Button" type="Button" parent="Main_Display"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
offset_left = 521.0
offset_top = 29.0
offset_right = 622.0
offset_bottom = 130.0
theme_override_styles/normal = SubResource("StyleBoxFlat_nxogm")
flat = true

[node name="NinePatchRect" type="NinePatchRect" parent="Main_Display/Delete_Data_Button"]
texture_filter = 1
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
texture = ExtResource("2_m7jmp")
region_rect = Rect2(0, 0, 100, 100)
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="Label" type="Label" parent="Main_Display/Delete_Data_Button/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 28.0
offset_right = -30.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
text = "X"
label_settings = SubResource("LabelSettings_3253y")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Main_Display"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 26.0
offset_top = 142.0
offset_right = -26.0
offset_bottom = -29.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="Create_New_Button" type="Button" parent="Main_Display/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_nxogm")
flat = true

[node name="NinePatchRect" type="NinePatchRect" parent="Main_Display/VBoxContainer/Create_New_Button"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ulcgi")
region_rect = Rect2(0, 0, 100, 100)
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="Label" type="Label" parent="Main_Display/VBoxContainer/Create_New_Button/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 28.0
offset_right = -30.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
text = "Create New +"
label_settings = SubResource("LabelSettings_3253y")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TotalLabel" type="Label" parent="Main_Display/VBoxContainer"]
layout_mode = 2
text = "Total:"
label_settings = SubResource("LabelSettings_3253y")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TotalPriceLabel" type="Label" parent="Main_Display/VBoxContainer"]
layout_mode = 2
text = "$0"
label_settings = SubResource("LabelSettings_nxogm")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Main_Display/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="DataVBoxContainer" type="VBoxContainer" parent="Main_Display/VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(400, 800)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_constants/separation = 5

[node name="Entry_Display" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_3253y")

[node name="VBoxContainer" type="VBoxContainer" parent="Entry_Display"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 26.0
offset_top = 29.0
offset_right = -26.0
offset_bottom = -29.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Exit_Entry_Button" type="Button" parent="Entry_Display/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_nxogm")
flat = true

[node name="NinePatchRect" type="NinePatchRect" parent="Entry_Display/VBoxContainer/Exit_Entry_Button"]
texture_filter = 1
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
texture = ExtResource("2_m7jmp")
region_rect = Rect2(0, 0, 100, 100)
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="Label" type="Label" parent="Entry_Display/VBoxContainer/Exit_Entry_Button/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 28.0
offset_right = -30.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
text = "X"
label_settings = SubResource("LabelSettings_3253y")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Detail_Entry" type="NinePatchRect" parent="Entry_Display/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
texture = ExtResource("4_u3cyc")
region_rect = Rect2(0, 0, 100, 100)
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="Label" type="Label" parent="Entry_Display/VBoxContainer/Detail_Entry"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 28.0
offset_right = -30.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
text = "Enter Details"
label_settings = SubResource("LabelSettings_3253y")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Entries" type="VBoxContainer" parent="Entry_Display/VBoxContainer"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="NameLineEdit" type="LineEdit" parent="Entry_Display/VBoxContainer/Entries"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 60
placeholder_text = "Name"
alignment = 1

[node name="Amount" type="LineEdit" parent="Entry_Display/VBoxContainer/Entries"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 60
placeholder_text = "Amount"
alignment = 1
virtual_keyboard_type = 3

[node name="Submit_Button" type="Button" parent="Entry_Display/VBoxContainer/Entries"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_nxogm")
flat = true

[node name="NinePatchRect" type="NinePatchRect" parent="Entry_Display/VBoxContainer/Entries/Submit_Button"]
texture_filter = 1
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_y2354")
region_rect = Rect2(0, 0, 100, 100)
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="Label" type="Label" parent="Entry_Display/VBoxContainer/Entries/Submit_Button/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 28.0
offset_right = -30.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
text = "âœ“"
label_settings = SubResource("LabelSettings_3253y")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Add" type="Button" parent="Entry_Display/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_nxogm")

[node name="NinePatchRect" type="NinePatchRect" parent="Entry_Display/VBoxContainer/Add"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ulcgi")
region_rect = Rect2(0, 0, 100, 100)
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="Label" type="Label" parent="Entry_Display/VBoxContainer/Add/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 28.0
offset_right = -30.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
text = "Add Entry"
label_settings = SubResource("LabelSettings_3253y")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ErrorLabel" type="Label" parent="Entry_Display/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
label_settings = SubResource("LabelSettings_u3cyc")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Delete_Menu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_ni31j")

[node name="VBoxContainer" type="VBoxContainer" parent="Delete_Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Really Delete" type="Label" parent="Delete_Menu/VBoxContainer"]
layout_mode = 2
text = "Really Delete?"
label_settings = SubResource("LabelSettings_ni31j")
horizontal_alignment = 1
vertical_alignment = 1

[node name="No" type="Button" parent="Delete_Menu/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_nxogm")
flat = true

[node name="NinePatchRect" type="NinePatchRect" parent="Delete_Menu/VBoxContainer/No"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 44.0
offset_top = 5.0
offset_right = -44.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_y2354")
region_rect = Rect2(0, 0, 100, 100)
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="Label" type="Label" parent="Delete_Menu/VBoxContainer/No/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 28.0
offset_right = -30.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
text = "No"
label_settings = SubResource("LabelSettings_3253y")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Yes" type="Button" parent="Delete_Menu/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_nxogm")
flat = true

[node name="NinePatchRect" type="NinePatchRect" parent="Delete_Menu/VBoxContainer/Yes"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 44.0
offset_top = 5.0
offset_right = -44.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_m7jmp")
region_rect = Rect2(0, 0, 100, 100)
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="Label" type="Label" parent="Delete_Menu/VBoxContainer/Yes/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 28.0
offset_right = -30.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
text = "Yes"
label_settings = SubResource("LabelSettings_3253y")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Data_Entry_Menu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_xlvrw")

[node name="VBoxContainer" type="VBoxContainer" parent="Data_Entry_Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Name" type="Label" parent="Data_Entry_Menu/VBoxContainer"]
layout_mode = 2
text = "Name"
label_settings = SubResource("LabelSettings_xlvrw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Amount" type="Label" parent="Data_Entry_Menu/VBoxContainer"]
layout_mode = 2
text = "$0"
label_settings = SubResource("LabelSettings_73fnb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Cancel" type="Button" parent="Data_Entry_Menu/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_nxogm")
flat = true

[node name="NinePatchRect" type="NinePatchRect" parent="Data_Entry_Menu/VBoxContainer/Cancel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 44.0
offset_top = 5.0
offset_right = -44.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_u3cyc")
region_rect = Rect2(0, 0, 100, 100)
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="Label" type="Label" parent="Data_Entry_Menu/VBoxContainer/Cancel/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 28.0
offset_right = -30.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
text = "Cancel"
label_settings = SubResource("LabelSettings_3253y")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="Data_Entry_Menu/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Delete" type="Button" parent="Data_Entry_Menu/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_nxogm")
flat = true

[node name="NinePatchRect" type="NinePatchRect" parent="Data_Entry_Menu/VBoxContainer/Delete"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 171.0
offset_top = 5.0
offset_right = -171.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CompressedTexture2D_ni31j")
region_rect = Rect2(0, 0, 100, 100)
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20

[node name="Label" type="Label" parent="Data_Entry_Menu/VBoxContainer/Delete/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 28.0
offset_right = -30.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
text = "Delete"
label_settings = SubResource("LabelSettings_3253y")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Main_Display/Delete_Data_Button" to="." method="_on_delete_data_button_pressed"]
[connection signal="pressed" from="Main_Display/VBoxContainer/Create_New_Button" to="." method="_on_create_new_button_pressed"]
[connection signal="visibility_changed" from="Entry_Display" to="Entry_Display" method="_on_visibility_changed"]
[connection signal="pressed" from="Entry_Display/VBoxContainer/Exit_Entry_Button" to="Entry_Display" method="_on_exit_entry_button_pressed"]
[connection signal="pressed" from="Entry_Display/VBoxContainer/Add" to="Entry_Display" method="_on_add_pressed"]
[connection signal="pressed" from="Delete_Menu/VBoxContainer/No" to="Delete_Menu" method="_on_no_pressed"]
[connection signal="pressed" from="Delete_Menu/VBoxContainer/Yes" to="Delete_Menu" method="_on_yes_pressed"]
[connection signal="pressed" from="Data_Entry_Menu/VBoxContainer/Cancel" to="Data_Entry_Menu" method="_on_cancel_pressed"]
[connection signal="pressed" from="Data_Entry_Menu/VBoxContainer/Delete" to="Data_Entry_Menu" method="_on_delete_pressed"]
